[gd_scene load_steps=2 format=3 uid="uid://csiehao7irsp4"]

[ext_resource type="Script" path="res://gui/credits_task.gd" id="1_etwr4"]

[node name="CreditsTask" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_etwr4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 40.0
offset_bottom = 40.0

[node name="TaskLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PersonsFlowContainer" type="HFlowContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
